# ciqt

./: CLAUDE.md  GEMINI.md  LICENSE  PLAN.md  README.md  ciqt.cabal  flake.nix  package.yaml  result
.github/workflows/: build.yml  upgrade.yml
src/: Ciqt.hs  Main.hs
src/Ciqt/: AWS.hs  CLI.hs  History.hs  Library.hs  Query.hs  Types.hs  Utils.hs
test/: Spec.hs
test/golden/: library-help.golden  main-help.golden  run-help.golden  simple-json.golden
