cabal-version: 2.2

name:           ciqt
version:        0.1.0.0
description:    CloudWatch Insights Query Tool - a sophisticated Haskell command-line utility for executing and retrieving CloudWatch Insights queries
homepage:       https://github.com/markus/ciqt#readme
bug-reports:    https://github.com/markus/ciqt/issues
author:         Markus
maintainer:     markus@example.com
copyright:      2023 Markus
license:        BSD-3-Clause
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/markus/ciqt

library
  exposed-modules:
      Ciqt
      Ciqt.AWS
      Ciqt.CLI
      Ciqt.Library
      Ciqt.Query
      Ciqt.Types
      Ciqt.Utils
  hs-source-dirs:
      src
  ghc-options: -Wall -fdefer-type-errors
  build-depends:
      base
    , aeson
    , amazonka >= 2.0
    , amazonka-core >= 2.0
    , amazonka-cloudwatch-logs >= 2.0
    , bytestring
    , containers
    , directory
    , exceptions
    , either
    , fast-logger >= 3.2
    , FailT
    , filepath
    , fmt
    , formatting >= 7.2.0
    , Glob
    , lens
    , lens-aeson
    , neat-interpolation
    , optparse-applicative
    , regex-pcre
    , retry
    , resourcet
    , split
    , text
    , time
    , xdg-basedir
  default-language: Haskell2010
  default-extensions:
    GADTs
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    QuasiQuotes
    TemplateHaskell
    TupleSections
    TypeApplications

executable ciqt
  main-is: src/Main.hs
  ghc-options: -Wall -fdefer-type-errors
  build-depends:
      base
    , ciqt
  default-language: Haskell2010

test-suite ciqt-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -Wall -fdefer-type-errors
  build-depends:
      base
    , ciqt
    , tasty
    , tasty-hunit
    , tasty-golden
    , text
    , filepath
    , directory
    , aeson
    , process
    , bytestring
  default-language: Haskell2010
  default-extensions:
    GADTs
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    QuasiQuotes
    TemplateHaskell
    TupleSections
    TypeApplications